# awtrix-light-client

./: .gitignore  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  ruff.toml  versions.json
.github/: dependabot.yml
.github/workflows/: release.yml  releases.yml  test.yml
awtrix_light_client/: http_client.py  http_settings.py
awtrix_light_client/models/: application.py  effect.py  loop.py  moodlight.py  screen.py  setting.py  stat.py  transition.py  utils.py
docs/: index.md
docs/api/: client.md  exceptions.md  settings.md
docs/api/models/: application.md  effect.md  loop.md  moodlight.md  screen.md  setting.md  stat.md  transition.md  utils.md
src/awtrix_light_client/: http_client.py  http_settings.py
src/awtrix_light_client/models/: application.py  effect.py  loop.py  moodlight.py  screen.py  setting.py  stat.py  transition.py  utils.py
tests/: conftest.py  test_http_client.py  test_http_settings.py
v1.1.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.1.1/api/client/: index.html
v1.1.1/api/exceptions/: index.html
v1.1.1/api/models/application/: index.html
v1.1.1/api/models/effect/: index.html
v1.1.1/api/models/loop/: index.html
v1.1.1/api/models/moodlight/: index.html
v1.1.1/api/models/screen/: index.html
v1.1.1/api/models/setting/: index.html
v1.1.1/api/models/stat/: index.html
v1.1.1/api/models/transition/: index.html
v1.1.1/api/models/utils/: index.html
v1.1.1/api/settings/: index.html
v1.1.1/assets/javascripts/: bundle.8fd75fb4.min.js
v1.1.1/search/: search_index.json
v1.1.3/: 404.html  index.html  sitemap.xml
v1.1.3/api/client/: index.html
v1.1.3/api/exceptions/: index.html
v1.1.3/api/models/application/: index.html
v1.1.3/api/models/effect/: index.html
v1.1.3/api/models/loop/: index.html
v1.1.3/api/models/moodlight/: index.html
v1.1.3/api/models/screen/: index.html
v1.1.3/api/models/setting/: index.html
v1.1.3/api/models/stat/: index.html
v1.1.3/api/models/transition/: index.html
v1.1.3/api/models/utils/: index.html
v1.1.3/api/settings/: index.html
v1.1.3/assets/javascripts/: bundle.fe8b6f2b.min.js
v1.1.3/search/: search_index.json
v1.3.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.3.1/api/client/: index.html
v1.3.1/api/exceptions/: index.html
v1.3.1/api/models/application/: index.html
v1.3.1/api/models/effect/: index.html
v1.3.1/api/models/loop/: index.html
v1.3.1/api/models/moodlight/: index.html
v1.3.1/api/models/screen/: index.html
v1.3.1/api/models/setting/: index.html
v1.3.1/api/models/stat/: index.html
v1.3.1/api/models/transition/: index.html
v1.3.1/api/models/utils/: index.html
v1.3.1/api/settings/: index.html
v1.3.1/assets/javascripts/: bundle.83f73b43.min.js
v1.3.1/search/: search_index.json
v2.0.0/: 404.html  index.html  sitemap.xml
v2.0.0/api/client/: index.html
v2.0.0/api/exceptions/: index.html
v2.0.0/api/models/application/: index.html
v2.0.0/api/models/effect/: index.html
v2.0.0/api/models/loop/: index.html
v2.0.0/api/models/moodlight/: index.html
v2.0.0/api/models/screen/: index.html
v2.0.0/api/models/setting/: index.html
v2.0.0/api/models/stat/: index.html
v2.0.0/api/models/transition/: index.html
v2.0.0/api/models/utils/: index.html
v2.0.0/api/settings/: index.html
v2.0.0/assets/javascripts/: bundle.79ae519e.min.js
v2.0.0/search/: search_index.json
