[project]
name = "awtrix-light-client"
version = "0.0.0"
description = "awtrix-light HTTP client to be used with Ulanzi clock"
readme = "README.md"
authors = [
    {name = "Ludovic Ortega", email = "ludovic.ortega@adminafk.fr"}
]
keywords = ["awtrix-light", "awtrix"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Topic :: Utilities",
]

requires-python = ">=3.9,<4.0.0"
dependencies = [
    "httpx>=0.22.0,<1.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings>=2.3.4,<3.0.0",
    "pydantic-extra-types>=2.8.2,<3.0.0"
]

[project.urls]
Homepage = "https://github.com/M0NsTeRRR/awtrix-light-client"
Repository = "https://github.com/M0NsTeRRR/awtrix-light-client"
Issues = "https://github.com/M0NsTeRRR/awtrix-light-client/issues"
Documentation = "https://m0nsterrr.github.io/awtrix-light-client/latest/"

[project.optional-dependencies]
dev = [
    "pytest~=8.3.3",
    "pytest-cov~=5.0.0",
    "pytest-asyncio~=0.24.0",
    "pytest-httpx>=0.32,<0.35",
    "ruff~=0.7.0",
    "mkdocs-material[imaging]~=9.5.41",
    "mkdocstrings-python~=1.12.1",
    "mike~=2.1.3"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/awtrix_light_client"]