[project]
name = "awtrix-light-client"
version = "0.0.0"
description = "awtrix-light HTTP client to be used with Ulanzi clock"
readme = "README.md"
authors = [
    {name = "Ludovic Ortega", email = "ludovic.ortega@adminafk.fr"}
]
keywords = ["awtrix-light", "awtrix"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Topic :: Utilities",
]

requires-python = ">=3.10,<4.0.0"
dependencies = [
    "httpx>=0.22.0,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pydantic-extra-types>=2.11.0,<3.0.0"
]

[project.urls]
Homepage = "https://github.com/M0NsTeRRR/awtrix-light-client"
Repository = "https://github.com/M0NsTeRRR/awtrix-light-client"
Issues = "https://github.com/M0NsTeRRR/awtrix-light-client/issues"
Documentation = "https://m0nsterrr.github.io/awtrix-light-client/latest/"
Funding = "https://ko-fi.com/ludovicortega"

[dependency-groups]
dev = [
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-httpx~=0.36.0",
    "ruff~=0.14.14",
    "mkdocs-material[imaging]~=9.7.1",
    "mkdocstrings-python~=2.0.1",
    "mike~=2.1.3"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/awtrix_light_client"]
